# pico-mac

./: .gitignore  CMakeLists.txt  README.md
include/: log.h  platform.h  video.h
ports/esp32s3/: CMakeLists.txt  README.md  sdkconfig
ports/esp32s3/main/: CMakeLists.txt  app_main.c  idf_component.yml  lcd_bringup.c  lcd_bringup.h  lcd_ws28b.c  lcd_ws28b.h  musashi_conf_esp32.h  pinmap.h  pinmap_ws28b.h  sdcard_disc.c  sdcard_disc.h  tca9554.c  tca9554.h  touch_input.c  touch_input.h
src/: hid.c  log.c  main.c  platform_esp32s3.c  platform_pico.c  sd_hw_config.c  video.c  video_waveshare_lcd.c
